Refactor: Simplify URL decoding logic in `PSExternalURI` by using `StandardCharsets.UTF_8`